gl31-master/src/test/deca/syntax/valid/sansobjet/inequality_expr.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    int a = 2;

    // instance Of pas implémenté dans sansObjet
    //while(a instanceof int){
    //    a = a + 1;
    //}
}
