gl31-master/src/test/deca/syntax/invalid/complet/meth_in_main.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 10 : Erreur, pas de méthodes dans le main
//
// Historique:
//    cree le 19/01/2021
{
    int methMain(){
        int a = 2;
        return a;
    }
}